@@ -1002,4 +1002,12 @@ public class NNStorage extends Storage implements Closeable,
     inspectStorageDirs(inspector);
     return inspector;
   }
+
+  public NamespaceInfo getNamespaceInfo() {
+    return new NamespaceInfo(
+        getNamespaceID(),
+        getClusterID(),
+        getBlockPoolID(),
+        getCTime());
+  }
 }
